# ffmpeg_invoker

./: CMakeLists.txt  common.cpp  common.h  decode_filter_concat_audio.c  decode_filter_mix_audio.c  ffmpeg_audio_adapter.cpp  ffmpeg_audio_adapter.h  ffmpeg_audio_codec.cpp  ffmpeg_audio_codec.h  ffmpeg_audio_common.h  ffmpeg_audio_decoder.cpp  ffmpeg_audio_decoder.h  ffmpeg_audio_encoder.cpp  ffmpeg_audio_encoder.h  main.cpp  test_favutil.cpp  transcode_aac.c  waveform.h
favutil/: CMakeLists.txt  common.cpp  common.h  waveform.cpp  waveform.h
